1998-04-22  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* ActivityControl.m, CustomProbeMap.m: Reformatting throughout.

	* ActivityControl.m, CompleteProbeMap.m, CustomProbeMap.m,
	MessageProbe.m, Probe.m, ProbeMap.m, Swarm.m, VarProbe.m move
	documentation tags to objectbase.h.

	* objectbase.h: Remove includes of SwarmObject.h and Swarm.h.

1998-04-19  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* MessageProbe.m ([MessageProbe -doubleDynamicCallOn:]): Convert
	for float, too.

1998-04-15  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* objectbase.h: Add //D: documentation comment tag for module.

1998-04-15  Irene Lee  <lee@wijiji.santafe.edu>

	* ActivityControl.m, CompleteProbeMap.m, CustomProbeMap.m,
	MessageProbe.m, Probe.m, ProbeLibrary.m, ProbeMap.m, Swarm.m,
	SwarmObject.m, VarProbe.m: Add tagged documentation comments.

1998-04-06  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Arguments.h: Include misc/argp.h.

	* Arguments.[hm]: New methods addOptions: and parseKey:arg:.

	* Arguments.m (parse_opt): Call parseKey:arg:. 
	Dynamically allocate arg (in +createBegin:)
	(+createBegin:) New method.
	
1998-04-02  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Arguments.m (findSwarm): return NULL if the SWARMHOME
	can't be found.

1998-03-30  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Arguments.m ([Arguments +createArgc:Argv:]): glibc or not,
	set program_invocation_name with expanded absolute path.

1998-03-19  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* MessageProbe.m ([MessageProbe -setArg:ToString:], [MessageProbe
	-dynamicCallOn:]): Add _C_CHARPTR support.

	* objectbase.h: Add const char * slot to val_t union.

1998-03-18  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Arguments.m: Include unistd.h and stdlib.h.
	Define swarm_version to be equal to VERSION.
	Define global Arguments object.
	([Arguments -getExecutablePath]): New method.
	([Arguments +createArgc:Argv:]): Use find_executable to