@@ -1,3 +1,13 @@
+1998-04-29  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+
+	* Makefile (version.h): Extract SWARM_{MAJOR,MINOR,SUBMINOR} from
+	version file.
+
+	* Arguments.m (SIGNATURE_FILE): New symbol for filename that has
+	version information.
+	(findSwarm): Use it instead of "VERSION".  Use SWARM_VERSION
+	instead of VERSION throughout.
+
 1998-04-22  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
 	* ActivityControl.m, CustomProbeMap.m: Reformatting throughout.
